--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -7,7 +7,7 @@
     font-weight: 400;
     padding-left: 20px;
 }
-button{
+.main_button{
     width: 150px;
     background-color: #F0C14B;
     border: 1px solid gray;
